--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.profiles.active=fixed,override,op-override
-minisocial.database.host=localhost
-minisocial.database.name=miniSocialMedia
+spring.profiles.active=local
+minisocial.database.host=
+minisocial.database.name=
 kit.database.url=${minisocial.database.host}:1433
 spring.datasource.url=jdbc:sqlserver://${kit.database.url};databaseName=${minisocial.database.name}
 spring.datasource.username=
