--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
 minisocial.database.host=localhost
-minisocial.database.name=miniSocialMedia
+minisocial.database.name=MiniSocial
 spring.datasource.username=sa
 spring.datasource.password=123456789
