--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=local
 minisocial.database.host=
-minisocial.database.name=
+minisocial.database.name=MiniSocial
 kit.database.url=${minisocial.database.host}:1433
 spring.datasource.url=jdbc:sqlserver://${kit.database.url};databaseName=${minisocial.database.name}
 spring.datasource.username=
@@ -9,3 +9,5 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = create-drop
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
