--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.nguyentrinhan</groupId>
     <artifactId>minisocial</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>minisocial</name>
     <description>Demo project for Spring Boot</description>
     <properties>
